Move PermanentApplicationPackage out of GlobalComponentRegistry